redesign party player screen

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -55,6 +55,31 @@ Text = SING_LOADING
 Reflection = 0
 ReflectionSpacing = 13
 
+# --------------
+# Common objects
+# --------------
+[Common]
+[CommonButtonContinue]
+X = 560
+Y = 550
+W = 170
+H = 35
+Tex = ButtonContinue
+Texts = 1
+Type = Transparent
+Color = ColorDark
+DColor = White
+
+[CommonTextContinue]
+X = 85
+Y = 10
+Size = 15
+Font = 0
+Text = C_CONTINUE
+Color = White
+Align = 1
+
+
 [Main]
 [MainBackground]
 Tex = MainBG
@@ -66,7 +91,7 @@ Color = White
 Font = 0
 Size = 15
 Align = 0
-Text = UltraStar WorldParty 23.04
+Text = UltraStar WorldParty 23.05
 
 [MainText2]
 X = 5
@@ -6728,46 +6753,92 @@ Texts = 6
 [PartyPlayerBackground]
 Tex = PartyBG
 
+[PartyPlayerStatic1]
+Tex = PartyTeamBG
+X = 50
+Y = 140
+W = 220
+H = 400
+Color=P1Dark
+Type = Transparent
+
+[PartyPlayerStatic2]
+Inheritance = PartyPlayerStatic1
+X = 292
+Color=P2Dark
+
+[PartyPlayerStatic3]
+Inheritance = PartyPlayerStatic1
+X = 534
+Color=P3Dark
+
 [PartyPlayerText1]
 Inheritance = PartyOptionsText1
+
+[PartyPlayerText2]
+Inheritance = PartyOptionsText1
+Text = PARTY_MODE_DESC
+X = 320
+Y = 560
+Align = 1
+Size = 18
 
 [PartyPlayerSelectTeams]
 Inheritance = PartyOptionsSelectLevel
 SBGW = 150
 X = 200
-Y = 120
+Y = 90
 Text = PARTY_TEAMS
 Fields = 2
 
 [PartyPlayerSelectPlayers1]
-Inheritance = PartyOptionsSelectLevel
+Type = Transparent
 TexSBG = PartyPlayerSelectBG
+TextSize = 16
+TypeSBG = Transparent
 Text = PARTY_TEAMS_PLAYER1
-X = 310
-Y = 175
-SBGW = 150
+ShowArrows = 1
+OneItemOnly = 1
+X = 50
+Y = 240
+W = 100
+H = 30
+SBGW = 70
+SkipX = 25
+Fields = 1
+DColor =
+Color =
+TColor = White
+TDColor = White
+SBGDColor = GrayLight
+SBGColor = ColorDark
+STColor = White
+STDColor = GrayDark
+
 
 [PartyPlayerSelectPlayers2]
 Inheritance = PartyPlayerSelectPlayers1
 Text = PARTY_TEAMS_PLAYER2
-Y = 300
+X = 300
+Y = 240
 
 [PartyPlayerSelectPlayers3]
 Inheritance = PartyPlayerSelectPlayers1
 Text = PARTY_TEAMS_PLAYER3
-Y = 425
+X = 540
+Y = 240
 
 [PartyPlayerTeam1Name]
-Tex = PartyTeamButton2
-X = 90
-Y = 175
-W = 180
+Tex = PartyPlayerButton
+X = 50
+Y = 170
+W = 219
 H = 35
 Type = Transparent
 Texts = 1
 
 [PartyPlayerTeam1NameText1]
-X = 90
+X = 110
 Y = 10
 Font = 0
 Size = 18
@@ -6777,21 +6848,22 @@ Color = White
 
 [PartyPlayerPlayer1Name]
 Inheritance = PartyPlayerTeam1Name
-Tex = Button
-Y = 225
-W = 140
-Reflection = 1
-ReflectionSpacing = 1
+Tex = PartyPlayerButton
+X = 50
+Y = 300
+W = 219
 
 [PartyPlayerPlayer1NameText1]
 Inheritance = PartyPlayerTeam1NameText1
-X = 70
+X = 20
 Y = 7
+Align = 0
 Text = Player 1
 
 [PartyPlayerPlayer2Name]
 Inheritance = PartyPlayerPlayer1Name
-X = 240
+X = 50
+Y = 345
 
 [PartyPlayerPlayer2NameText1]
 Inheritance = PartyPlayerPlayer1NameText1
@@ -6799,7 +6871,8 @@ Text = Player 2
 
 [PartyPlayerPlayer3Name]
 Inheritance = PartyPlayerPlayer1Name
-X = 390
+X = 50
+Y = 390
 
 [PartyPlayerPlayer3NameText1]
 Inheritance = PartyPlayerPlayer1NameText1
@@ -6807,7 +6880,8 @@ Text = Player 3
 
 [PartyPlayerPlayer4Name]
 Inheritance = PartyPlayerPlayer1Name
-X = 540
+X = 50
+Y = 435
 
 [PartyPlayerPlayer4NameText1]
 Inheritance = PartyPlayerPlayer1NameText1
@@ -6815,7 +6889,8 @@ Text = Player 4
 
 [PartyPlayerTeam2Name]
 Inheritance = PartyPlayerTeam1Name
-Y = 300
+X = 292
+Y = 170
 
 [PartyPlayerTeam2NameText1]
 Inheritance = PartyPlayerTeam1NameText1
@@ -6823,7 +6898,8 @@ Text = Team 2
 
 [PartyPlayerPlayer5Name]
 Inheritance = PartyPlayerPlayer1Name
-Y = 350
+X = 292
+Y = 300
 
 [PartyPlayerPlayer5NameText1]
 Inheritance = PartyPlayerPlayer1NameText1
@@ -6831,7 +6907,8 @@ Text = Player 5
 
 [PartyPlayerPlayer6Name]
 Inheritance = PartyPlayerPlayer2Name
-Y = 350
+X = 292
+Y = 345
 
 [PartyPlayerPlayer6NameText1]
 Inheritance = PartyPlayerPlayer1NameText1
@@ -6839,7 +6916,8 @@ Text = Player 6
 
 [PartyPlayerPlayer7Name]
 Inheritance = PartyPlayerPlayer3Name
-Y = 350
+X = 292
+Y = 390
 
 [PartyPlayerPlayer7NameText1]
 Inheritance = PartyPlayerPlayer1NameText1
@@ -6847,7 +6925,8 @@ Text = Player 7
 
 [PartyPlayerPlayer8Name]
 Inheritance = PartyPlayerPlayer4Name
-Y = 350
+X = 292
+Y = 435
 
 [PartyPlayerPlayer8NameText1]
 Inheritance = PartyPlayerPlayer1NameText1
@@ -6855,7 +6934,8 @@ Text = Player 8
 
 [PartyPlayerTeam3Name]
 Inheritance = PartyPlayerTeam1Name
-Y = 425
+X = 534
+Y = 170
 
 [PartyPlayerTeam3NameText1]
 Inheritance = PartyPlayerTeam1NameText1
@@ -6863,7 +6943,8 @@ Text = Team 3
 
 [PartyPlayerPlayer9Name]
 Inheritance = PartyPlayerPlayer1Name
-Y = 475
+X = 534
+Y = 300
 
 [PartyPlayerPlayer9NameText1]
 Inheritance = PartyPlayerPlayer1NameText1
@@ -6871,7 +6952,8 @@ Text = Player 9
 
 [PartyPlayerPlayer10Name]
 Inheritance = PartyPlayerPlayer2Name
-Y = 475
+X = 534
+Y = 345
 
 [PartyPlayerPlayer10NameText1]
 Inheritance = PartyPlayerPlayer1NameText1
@@ -6879,7 +6961,8 @@ Text = Player 10
 
 [PartyPlayerPlayer11Name]
 Inheritance = PartyPlayerPlayer3Name
-Y = 475
+X = 534
+Y = 390
 
 [PartyPlayerPlayer11NameText1]
 Inheritance = PartyPlayerPlayer1NameText1
@@ -6887,11 +6970,18 @@ Text = Player 11
 
 [PartyPlayerPlayer12Name]
 Inheritance = PartyPlayerPlayer4Name
-Y = 475
+X = 534
+Y = 435
 
 [PartyPlayerPlayer12NameText1]
 Inheritance = PartyPlayerPlayer1NameText1
 Text = Player 12
+
+[PartyPlayerButtonContinue]
+Inheritance = CommonButtonContinue
+
+[PartyPlayerButtonContinueText1]
+Inheritance = CommonTextContinue
 
 ############################
 ## R O U N D   P A R T Y  ##
