--- a/game/themes/common/Basic Violet.ini
+++ b/game/themes/common/Basic Violet.ini
@@ -182,7 +182,7 @@ TournamentButton      =[tournament]trophy.png
 
 # # # PARTY # # #
 Joker                 =[party]Joker.png
-PartyPlayerButton     =[party]playerButton.png
+PartyPlayerButton     =[party]playerButton.svg
 PartyTeamButton1      =[party]roundTeamButton.png
 PartyTeamButton2      =[party]playerTeamButton.png
 PartyTeamButton3      =[party]winTeamButton1.png
@@ -200,13 +200,13 @@ PartyScoreBG2         =[party]scoreBG2.png
 PartyWinDeco1         =[party]winDecoration.png
 PartyWinDeco2         =[party]winDecoration.png
 PartyWinDeco3         =[party]winDecoration.png
-PartyPlayerSelectBG   =[party]playerselectbg.png
+PartyPlayerSelectBG   =[party]playerselectbg.svg
 PartyTrophy           =[tournament]trophy.png
 PartyWinner           =[tournament]winner.png
 PartyChallengeButton  =[partyoptions]challenge.svg
 PartyClassicButton    =[partyoptions]classic.svg
 PartyTournamentButton =[partyoptions]tournament.svg
-
+PartyTeamBG           =[party]teambg.svg
 
 # # # BACKGROUNDS # # #
 SongMenuBG            =[menu]songMenuBg.png
@@ -304,6 +304,7 @@ ButtonFade        =[helper]buttonFade.png
 AuxColor          =auxcolor.svg
 
 ButtonBack        =buttonback.svg
+ButtonContinue    =[common]buttoncontinue.png
 ButtonSort        =buttonsort.svg
 
 InfoBG1           =InfoBG1.svg
