Update 6 player score screen

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -5835,8 +5835,8 @@ Color = P4Dark
 # P L A Y E R  O N E
 [ScoreSixPTextName1]
 Inheritance = ScoreTextName4
-X = 75
-Size = 32
+X = 20
+Y = 140
 
 [ScoreSixPTextNotes1]
 Inheritance = ScoreTextNotes4
@@ -5862,13 +5862,15 @@ Inheritance = ScoreTextGoldenNotesScore4
 [ScoreSixPTextTotal1]
 Inheritance = ScoreTextTotal1
 X = 20
-Y = 280
+Y = 270
+Size = 26
 Reflection = 0
 
 [ScoreSixPTextTotalScore1]
 Inheritance = ScoreTextTotalSCore1
 X = 260
-Y = 275
+Y = 270
+Size = 26
 Reflection = 0
 
 #lines
@@ -5885,7 +5887,7 @@ Inheritance = ScorePlayer4Static3
 Inheritance = ScorePlayer4Static4
 
 [ScoreSixPPlayer1Avatar]
-X = 24
+X = 224
 Y = 115
 W = 36
 H = 49
@@ -5894,7 +5896,7 @@ Type = Transparent
 
 [ScoreSixPPlayer1Static5]
 Inheritance = ScorePlayer1Static5
-X = 20
+X = 220
 Y = 110
 W = 44
 H = 59
@@ -5902,7 +5904,8 @@ H = 59
 # P L A Y E R  T W O
 [ScoreSixPTextName2]
 Inheritance = ScoreTextName5
-X = 335
+X = 280
+Y = 140
 
 [ScoreSixPTextNotes2]
 Inheritance = ScoreTextNotes5
@@ -5926,15 +5929,15 @@ X = 280
 Inheritance = ScoreTextGoldenNotesScore5
 
 [ScoreSixPTextTotal2]
-Inheritance = ScoreTextTotal1
+Inheritance = ScoreSixPTextTotal1
 X = 280
-Y = 280
+Y = 270
 Reflection = 0
 
 [ScoreSixPTextTotalScore2]
-Inheritance = ScoreTextTotalSCore1
+Inheritance = ScoreSixPTextTotalScore1
 X = 520
-Y = 275
+Y = 270
 Reflection = 0
 
 #lines
@@ -5952,17 +5955,18 @@ Inheritance = ScorePlayer5Static4
 
 [ScoreSixPPlayer2Avatar]
 Inheritance = ScoreSixPPlayer1Avatar
-X = 284
+X = 484
 
 [ScoreSixPPlayer2Static5]
 Inheritance = ScoreSixPPlayer1Static5
-X = 280
+X = 480
 Color = P2Dark
 
 # P L A Y E R  T H R E E
 [ScoreSixPTextName3]
 Inheritance = ScoreTextName6
-X = 595
+X = 540
+Y = 140
 
 [ScoreSixPTextNotes3]
 Inheritance = ScoreTextNotes6
@@ -5986,16 +5990,16 @@ X = 540
 Inheritance = ScoreTextGoldenNotesScore6
 
 [ScoreSixPTextTotal3]
-Inheritance = ScoreTextTotal6
+Inheritance = ScoreSixPTextTotal1
 X = 540
-Y = 280
+Y = 270
 Align = 0
 Reflection = 0
 
 [ScoreSixPTextTotalScore3]
-Inheritance = ScoreTextTotalScore6
+Inheritance = ScoreSixPTextTotalScore1
 X = 780
-Y = 275
+Y = 270
 Align = 2
 Reflection = 0
 
@@ -6014,17 +6018,17 @@ Inheritance = ScorePlayer6Static4
 
 [ScoreSixPPlayer3Avatar]
 Inheritance = ScoreSixPPlayer1Avatar
-X = 544
+X = 744
 
 [ScoreSixPPlayer3Static5]
 Inheritance = ScoreSixPPlayer1Static5
-X = 540
+X = 740
 Color = P3Dark
 
 # P L A Y E R  F O U R
 [ScoreSixPTextName4]
 Inheritance = ScoreSixPTextName1
-Y = 355
+Y = 360
 
 [ScoreSixPTextNotes4]
 Inheritance = ScoreSixPTextNotes1
@@ -6052,11 +6056,11 @@ Y = 450
 
 [ScoreSixPTextTotal4]
 Inheritance = ScoreSixPTextTotal1
-Y = 500
+Y = 490
 
 [ScoreSixPTextTotalScore4]
 Inheritance = ScoreSixPTextTotalScore1
-Y = 495
+Y = 490
 
 #lines
 [ScoreSixPPlayer4Static1]
@@ -6087,7 +6091,7 @@ Color = P4Dark
 # P L A Y E R  F I V E
 [ScoreSixPTextName5]
 Inheritance = ScoreSixPTextName2
-Y = 355
+Y = 360
 
 [ScoreSixPTextNotes5]
 Inheritance = ScoreSixPTextNotes2
@@ -6115,11 +6119,11 @@ Y = 450
 
 [ScoreSixPTextTotal5]
 Inheritance = ScoreSixPTextTotal2
-Y = 500
+Y = 490
 
 [ScoreSixPTextTotalScore5]
 Inheritance = ScoreSixPTextTotalScore2
-Y = 495
+Y = 490
 
 #lines
 [ScoreSixPPlayer5Static1]
@@ -6150,7 +6154,7 @@ Color = P5Dark
 # P L A Y E R  S I X
 [ScoreSixPTextName6]
 Inheritance = ScoreSixPTextName3
-Y = 355
+Y = 360
 
 [ScoreSixPTextNotes6]
 Inheritance = ScoreSixPTextNotes3
@@ -6178,11 +6182,11 @@ Y = 450
 
 [ScoreSixPTextTotal6]
 Inheritance = ScoreSixPTextTotal3
-Y = 500
+Y = 490
 
 [ScoreSixPTextTotalScore6]
 Inheritance = ScoreSixPTextTotalScore3
-Y = 495
+Y = 490
 
 #lines
 [ScoreSixPPlayer6Static1]
