add button continue to score screen

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -61,9 +61,9 @@ ReflectionSpacing = 13
 [Common]
 [CommonButtonContinue]
 X = 560
-Y = 550
+Y = 555
 W = 170
-H = 35
+H = 30
 Tex = ButtonContinue
 Texts = 1
 Type = Transparent
@@ -72,7 +72,7 @@ DColor = White
 
 [CommonTextContinue]
 X = 85
-Y = 10
+Y = 7
 Size = 15
 Font = 0
 Text = C_CONTINUE
@@ -6214,26 +6214,37 @@ Inheritance = ScoreSixPPlayer3Static5
 Y = 332
 Color = P6Dark
 
+[ScoreButtonContinue]
+Inheritance = CommonButtonContinue
+Type = Transparent
+Color = White
+DColor = ColorLight
+X = 415
+Y = 550
+
+[ScoreButtonContinueText1]
+Inheritance = CommonTextContinue
+
 ############################
 #    Send Score 1 Player   #
 ############################
 
 [ScoreButtonSend1]
-X = 200
-Y = 540
+X = 225
+Y = 550
 W = 160
 H = 30
-Tex = ButtonF
+Tex = ButtonContinue
+Color = ColorDark
 DColor = White
-Color = ColorLight
 Type = Transparent
 Texts = 1
 
 [ScoreButtonSend1Text1]
 X = 80
-Y = 6
+Y = 7
 Font = 0
-Size = 18
+Size = 15
 Align = 1
 Color = White
 Text = SCORE_SEND_DESC
@@ -6244,8 +6255,8 @@ Text = SCORE_SEND_DESC
 
 [ScoreButtonSend2]
 Inheritance = ScoreButtonSend1
-X = 325
-Y = 100
+X = 225
+Y = 550
 Z = 1
 Texts = 1
 
@@ -6258,8 +6269,8 @@ Inheritance = ScoreButtonSend1Text1
 
 [ScoreButtonSend3]
 Inheritance = ScoreButtonSend1
-X = 310
-Y = 100
+X = 225
+Y = 550
 Z = 1
 Texts = 1
 
