Added song time to the advanced option menu

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -9825,6 +9825,16 @@ Inheritance = OptionsDescText
 Text = SING_OPTIONS_ADVANCED_TOPSCORES_DESC
 Y = 337
 
+[OptionsAdvancedSelectSingTimebarMode]
+Inheritance = OptionsSelectSlide
+Text = SING_OPTIONS_ADVANCED_SING_TIMEBAR_MODE
+Y = 370
+
+[OptionsAdvancedSingTimebarModeDesc]
+Inheritance = OptionsDescText
+Text = SING_OPTIONS_ADVANCED_SING_TIMEBAR_MODE_DESC
+Y = 377
+
 [OptionsAdvancedButtonExit]
 Inheritance = OptionsButtonExit2
 
