Removed extra texts definitions and reorganize option buttons inheritance

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -8664,10 +8664,6 @@ Y = 394
 ### S T A T S   S C R E E N  ###
 ################################
 
-[StatMain]
-Texts = 0
-Statics = 0
-
 [StatMainBackground]
 Tex = MainBG
 
@@ -8987,18 +8983,21 @@ Size = 35
 Text = SING_OPTIONS
 Align = 0
 
-[OptionsButton]
-W = 60
-H = 60
+[OptionIconButton]
 Color = ColorDark
 DColor = White
 Type = Transparent
-Texts = 1
 Fade = 1
-FadeText = 1
-SelectH = 55
 FadeTex = ButtonFade
 FadeTexPos = 0
+
+[OptionsButton]
+Inheritance = OptionIconButton
+W = 60
+H = 60
+SelectH = 55
+Texts = 1
+FadeText = 1
 
 [OptionsButtonGeneralText]
 X = 30
@@ -9154,27 +9153,24 @@ X = 25
 Y = 65
 
 [OptionsButtonExit]
-Inheritance = OptionsButton
 X = 730
 Y = 540
 H = 25
 W = 25
 SelectH = 23
 Tex = ButtonBack
-
-
-[OptionsButtonExit2]
-X = 740
-Y = 100
-W = 17
-H = 17
-Tex = ButtonBack
 Color = ColorDark
 DColor = White
 Type = Transparent
 Reflection = 0
-Texts = 1
 
+[OptionsButtonExit2]
+Inheritance = OptionsButtonExit
+X = 740
+Y = 100
+W = 17
+H = 17
+SelectH = 17
 
 [OptionsSelectSlide]
 Tex =
@@ -10246,7 +10242,7 @@ Color = ColorDark
 Tex = Songdirsbuttonadd
 
 [OptionsSongdirsFolderButton1]
-Inheritance = OptionsButton
+Inheritance = OptionIconButton
 X = 60
 Y = 190
 W = 21
@@ -10265,7 +10261,7 @@ Color = ColorLight
 Tex = Songdirrectangle
 
 [OptionsSongdirsDeleteFolderButton1]
-Inheritance = OptionsButton
+Inheritance = OptionIconButton
 X = 678
 Y = 193
 W = 18
