update pause screen

--- a/game/themes/common/Basic Violet.ini
+++ b/game/themes/common/Basic Violet.ini
@@ -225,7 +225,7 @@ NotePlainRight        =[sing]notesPlainRight.png
 NoteBGLeft            =[sing]notesBgLeft.png
 NoteBGMid             =[sing]notesBgMid.png
 NoteBGRight           =[sing]notesBgRight.png
-Pause                 =[sing]pause.png
+Pause                 =[sing]pause.svg
 
 GrayLeftRap           =[rap]notesLeft.png
 GrayMidRap            =[rap]notesMid.png
