Removed webcam option preview button to show it directly if is activated

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -3374,6 +3374,9 @@ W = 640
 Y = 546
 H = 36
 
+[SingWebcam]
+Inheritance = Webcam
+
 # O N E  P L A Y E R   M O D E # # # # # # # # # # # # # # # # # # # #
 #PlayerOne
 [SingP1Static]
@@ -8231,6 +8234,9 @@ IndicatorYOffset = 8
 Inheritance = JukeboxLyricsUpperBar
 Y = 540
 
+[JukeboxWebcam]
+Inheritance = Webcam
+
 [JukeboxSongListBackground]
 Tex = JukeboxSongListBackground
 X = 100
@@ -9975,17 +9981,15 @@ Tex = OptionsWebcamBG
 [OptionsWebcamStatic1]
 Inheritance = OptionsMenuBG
 
+[OptionsWebcamPreview]
+X = 335
+Y = 280
+W = 520
+H = 540
+
 [OptionsWebcamText1]
 Inheritance = OptionsTitleText
 Text = C_WEBCAM
-
-[OptionsWebcamText2]
-X = 70
-Y = 330
-Color = White
-Size = 14
-
-Text = SING_OPTIONS_WEBCAM_PREVIEW
 
 [OptionsWebcamSelectWebcam]
 Inheritance = OptionsSelectSlide
@@ -10036,25 +10040,6 @@ Y = 290
 Inheritance = OptionsDescText
 Text = SING_OPTIONS_WEBCAM_EFFECT_DESC
 Y = 297
-
-[OptionsWebcamButtonPreVisualization]
-X = 210
-Y = 330
-W = 170
-H = 25
-Tex = SelectBG
-Color = ColorDark
-DColor = Gray
-Type = Transparent
-Texts = 1
-
-[OptionsWebcamButtonPreVisualizationText1]
-X = 85
-Y = 5
-Align = 1
-Color = White
-Size = 14
-Text = SING_OPTIONS_WEBCAM_ENABLE_PREVIEW
 
 [OptionsWebcamButtonExit]
 Inheritance = OptionsButtonExit2
@@ -10563,3 +10548,9 @@ H = 600
 Z = 0.95
 Color = ColorLight
 Type = Colorized
+
+[Webcam]
+X = 0
+Y = 0
+W = 800
+H = 600
