[Sing] change difficult selector to slide on Top5 screen

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -6482,14 +6482,11 @@ Size = 20
 Align = 0
 Text = C_DIFFICULTY
 
-[Top5TextLevel]
-X = 150
+[Top5SelectLevel]
+Inheritance = OptionsSelectSlide
+X = 0
 Y = 120
-Color = White
-Font = 0
-Size = 20
-Align = 0
-Text = easy
+TextSize = 20
 
 [Top5Text5]
 X = 560
