[Sing] new Top10 screen

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -6631,6 +6631,500 @@ Y = 340
 Inheritance = Top5StaticNumber1
 Y = 390
 
+[Top10]
+Texts = 4
+
+[Top10Background]
+Tex = Top5BG
+
+[Top10Text1]
+X = 30
+Y = 30
+Color = White
+Font = 0
+Size = 35
+Align = 0
+Text = SING_TOP_10_CHARTS
+
+[Top10TextArtistTitle]
+X = 30
+Y = 80
+Color = White
+Font = 0
+Size = 30
+Align = 0
+Text = artist - title
+
+[Top10Text2]
+X = 117
+Y = 150
+Color = White
+Font = 0
+Size = 30
+Align = 0
+Text = OPTION_VALUE_EASY
+
+[Top10Text3]
+X = 368
+Y = 150
+Color = White
+Font = 0
+Size = 30
+Align = 0
+Text = OPTION_VALUE_MEDIUM
+
+[Top10Text4]
+X = 632
+Y = 150
+Color = White
+Font = 0
+Size = 30
+Align = 0
+Text = OPTION_VALUE_HARD
+
+[Top10TextDate1]
+X = 95
+Y = 190
+Color = White
+Font = 0
+Size = 19
+Align = 2
+Text = 00000
+
+[Top10TextDate2]
+Inheritance = Top10TextDate1
+Y = 225
+
+[Top10TextDate3]
+Inheritance = Top10TextDate1
+Y = 260
+
+[Top10TextDate4]
+Inheritance = Top10TextDate1
+Y = 295
+
+[Top10TextDate5]
+Inheritance = Top10TextDate1
+Y = 330
+
+[Top10TextDate6]
+Inheritance = Top10TextDate1
+Y = 365
+
+[Top10TextDate7]
+Inheritance = Top10TextDate1
+Y = 400
+
+[Top10TextDate8]
+Inheritance = Top10TextDate1
+Y = 435
+
+[Top10TextDate9]
+Inheritance = Top10TextDate1
+Y = 470
+
+[Top10TextDate10]
+Inheritance = Top10TextDate1
+Y = 505
+
+[Top10TextName1]
+X = 105
+Y = 190
+Color = White
+Font = 0
+Size = 19
+Align = 0
+Text = 1. Player1
+
+[Top10TextName2]
+Inheritance = Top10TextName1
+Y = 225
+Text = 2. Player2
+
+[Top10TextName3]
+Inheritance = Top10TextName1
+Y = 260
+Text = 3. Player3
+
+[Top10TextName4]
+Inheritance = Top10TextName1
+Y = 295
+Text = 4. Player4
+
+[Top10TextName5]
+Inheritance = Top10TextName1
+Y = 330
+Text = 5. Player5
+
+[Top10TextName6]
+Inheritance = Top10TextName1
+Y = 365
+Text = 6. Player6
+
+[Top10TextName7]
+Inheritance = Top10TextName1
+Y = 400
+Text = 7. Player7
+
+[Top10TextName8]
+Inheritance = Top10TextName1
+Y = 435
+Text = 8. Player8
+
+[Top10TextName9]
+Inheritance = Top10TextName1
+Y = 470
+Text = 9. Player9
+
+[Top10TextName10]
+Inheritance = Top10TextName1
+Y = 505
+Text = 10. Player10
+
+[Top10TextScore1]
+X = 252
+Y = 190
+Color = White
+Font = 0
+Size = 19
+Align = 2
+Text = 00000
+
+[Top10TextScore2]
+Inheritance = Top10TextScore1
+Y = 225
+
+[Top10TextScore3]
+Inheritance = Top10TextScore1
+Y = 260
+
+[Top10TextScore4]
+Inheritance = Top10TextScore1
+Y = 295
+
+[Top10TextScore5]
+Inheritance = Top10TextScore1
+Y = 330
+
+[Top10TextScore6]
+Inheritance = Top10TextScore1
+Y = 365
+
+[Top10TextScore7]
+Inheritance = Top10TextScore1
+Y = 400
+
+[Top10TextScore8]
+Inheritance = Top10TextScore1
+Y = 435
+
+[Top10TextScore9]
+Inheritance = Top10TextScore1
+Y = 470
+
+[Top10TextScore10]
+Inheritance = Top10TextScore1
+Y = 505
+
+[Top10TextDate11]
+X = 350
+Y = 190
+Color = White
+Font = 0
+Size = 19
+Align = 2
+Text = 00000
+
+[Top10TextDate12]
+Inheritance = Top10TextDate11
+Y = 225
+
+[Top10TextDate13]
+Inheritance = Top10TextDate11
+Y = 260
+
+[Top10TextDate14]
+Inheritance = Top10TextDate11
+Y = 295
+
+[Top10TextDate15]
+Inheritance = Top10TextDate11
+Y = 330
+
+[Top10TextDate16]
+Inheritance = Top10TextDate11
+Y = 365
+
+[Top10TextDate17]
+Inheritance = Top10TextDate11
+Y = 400
+
+[Top10TextDate18]
+Inheritance = Top10TextDate11
+Y = 435
+
+[Top10TextDate19]
+Inheritance = Top10TextDate11
+Y = 470
+
+[Top10TextDate20]
+Inheritance = Top10TextDate11
+Y = 505
+
+[Top10TextName11]
+X = 360
+Y = 190
+Color = White
+Font = 0
+Size = 19
+Align = 0
+Text = 1. Player1
+
+[Top10TextName12]
+Inheritance = Top10TextName11
+Y = 225
+Text = 2. Player2
+
+[Top10TextName13]
+Inheritance = Top10TextName11
+Y = 260
+Text = 3. Player3
+
+[Top10TextName14]
+Inheritance = Top10TextName11
+Y = 295
+Text = 4. Player4
+
+[Top10TextName15]
+Inheritance = Top10TextName11
+Y = 330
+Text = 5. Player5
+
+[Top10TextName16]
+Inheritance = Top10TextName11
+Y = 365
+Text = 6. Player6
+
+[Top10TextName17]
+Inheritance = Top10TextName11
+Y = 400
+Text = 7. Player7
+
+[Top10TextName18]
+Inheritance = Top10TextName11
+Y = 435
+Text = 8. Player8
+
+[Top10TextName19]
+Inheritance = Top10TextName11
+Y = 470
+Text = 9. Player9
+
+[Top10TextName20]
+Inheritance = Top10TextName11
+Y = 505
+Text = 10. Player10
+
+[Top10TextScore11]
+X = 510
+Y = 190
+Color = White
+Font = 0
+Size = 19
+Align = 2
+Text = 00000
+
+[Top10TextScore12]
+Inheritance = Top10TextScore11
+Y = 225
+
+[Top10TextScore13]
+Inheritance = Top10TextScore11
+Y = 260
+
+[Top10TextScore14]
+Inheritance = Top10TextScore11
+Y = 295
+
+[Top10TextScore15]
+Inheritance = Top10TextScore11
+Y = 330
+
+[Top10TextScore16]
+Inheritance = Top10TextScore11
+Y = 365
+
+[Top10TextScore17]
+Inheritance = Top10TextScore11
+Y = 400
+
+[Top10TextScore18]
+Inheritance = Top10TextScore11
+Y = 435
+
+[Top10TextScore19]
+Inheritance = Top10TextScore11
+Y = 470
+
+[Top10TextScore20]
+Inheritance = Top10TextScore11
+Y = 505
+
+[Top10TextDate21]
+X = 615
+Y = 190
+Color = White
+Font = 0
+Size = 19
+Align = 2
+Text = 00000
+
+[Top10TextDate22]
+Inheritance = Top10TextDate21
+Y = 225
+
+[Top10TextDate23]
+Inheritance = Top10TextDate21
+Y = 260
+
+[Top10TextDate24]
+Inheritance = Top10TextDate21
+Y = 295
+
+[Top10TextDate25]
+Inheritance = Top10TextDate21
+Y = 330
+
+[Top10TextDate26]
+Inheritance = Top10TextDate21
+Y = 365
+
+[Top10TextDate27]
+Inheritance = Top10TextDate21
+Y = 400
+
+[Top10TextDate28]
+Inheritance = Top10TextDate21
+Y = 435
+
+[Top10TextDate29]
+Inheritance = Top10TextDate21
+Y = 470
+
+[Top10TextDate30]
+Inheritance = Top10TextDate21
+Y = 505
+
+[Top10TextName21]
+X = 625
+Y = 190
+Color = White
+Font = 0
+Size = 19
+Align = 0
+Text = 1. Player1
+
+[Top10TextName22]
+Inheritance = Top10TextName21
+Y = 225
+Text = 2. Player2
+
+[Top10TextName23]
+Inheritance = Top10TextName21
+Y = 260
+Text = 3. Player3
+
+[Top10TextName24]
+Inheritance = Top10TextName21
+Y = 295
+Text = 4. Player4
+
+[Top10TextName25]
+Inheritance = Top10TextName21
+Y = 330
+Text = 5. Player5
+
+[Top10TextName26]
+Inheritance = Top10TextName21
+Y = 365
+Text = 6. Player6
+
+[Top10TextName27]
+Inheritance = Top10TextName21
+Y = 400
+Text = 7. Player7
+
+[Top10TextName28]
+Inheritance = Top10TextName21
+Y = 435
+Text = 8. Player8
+
+[Top10TextName29]
+Inheritance = Top10TextName21
+Y = 470
+Text = 9. Player9
+
+[Top10TextName30]
+Inheritance = Top10TextName21
+Y = 505
+Text = 10. Player10
+
+[Top10TextScore21]
+X = 775
+Y = 190
+Color = White
+Font = 0
+Size = 19
+Align = 2
+Text = 00000
+
+[Top10TextScore22]
+Inheritance = Top10TextScore21
+Y = 225
+
+[Top10TextScore23]
+Inheritance = Top10TextScore21
+Y = 260
+
+[Top10TextScore24]
+Inheritance = Top10TextScore21
+Y = 295
+
+[Top10TextScore25]
+Inheritance = Top10TextScore21
+Y = 330
+
+[Top10TextScore26]
+Inheritance = Top10TextScore21
+Y = 365
+
+[Top10TextScore27]
+Inheritance = Top10TextScore21
+Y = 400
+
+[Top10TextScore28]
+Inheritance = Top10TextScore21
+Y = 435
+
+[Top10TextScore29]
+Inheritance = Top10TextScore21
+Y = 470
+
+[Top10TextScore30]
+Inheritance = Top10TextScore21
+Y = 505
+
+[Top10ButtonContinue]
+Inheritance = CommonButtonContinue
+Type = Transparent
+Color = White
+DColor = ColorLight
+X = 575
+Y = 550
+
+[Top10ButtonContinueText1]
+Inheritance = CommonTextContinue
+
 ############################
 ###### P  A  R  T  Y #######
 ############################
