Replace rating pictures

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -4470,15 +4470,15 @@ Align = 1
 
 # Rating
 [ScoreStaticRatingPicture1]
-X = 385
-Y = 140
-H = 80
-W = 75
+X = 410
+Y = 155
+H = 105
+W = 80
 Type = Transparent
 
 [ScoreTextScore1]
-X = 422
-Y = 235
+X = 445
+Y = 270
 W = 100
 Color = White
 Font = 0
@@ -4688,10 +4688,19 @@ Inheritance = ScoreStaticRatingPicture1
 X = 180
 Y = 160
 
+[ScoreTextName2]
+X = 90
+Y = 280
+Font = 1
+Size = 25
+Font = 1
+Color = White
+Align = 1
+
 [ScoreTextScore2]
 Inheritance = ScoreTextScore1
 X = 217
-Y = 245
+Y = 275
 
 [ScoreStaticBoxDark2]
 Inheritance = ScoreStaticBoxDark1
@@ -4804,6 +4813,15 @@ Y = 157
 [ScoreStaticRatingPicture3]
 Inheritance = ScoreStaticRatingPicture2
 X = 545
+
+[ScoreTextName3]
+X = 710
+Y = 280
+Font = 1
+Size = 25
+Font = 1
+Color = White
+Align = 1
 
 [ScoreTextScore3]
 Inheritance = ScoreTextScore2
@@ -4918,11 +4936,19 @@ Color = P2Dark
 
 # Rating
 
+[ScoreStaticRatingPicture4]
+Inheritance = ScoreStaticRatingPicture1
+X = 50
+Y = 375
+H = 75
+W = 62
+Z = 2
+
 [ScoreTextName4]
 X = 45
 Y = 145
 Font = 1
-Size = 25
+Size = 20
 Align = 0
 Color = White
 
@@ -5010,13 +5036,6 @@ Y = 230
 Inheritance = ScorePlayer4Static1
 Y = 255
 
-[ScoreStaticRatingPicture4]
-Inheritance = ScoreStaticRatingPicture1
-X = 40
-Y = 375
-H = 75
-Z = 2
-
 [ScoreTextScore4]
 Inheritance = ScoreTextScore1
 X = 80
@@ -5067,7 +5086,7 @@ H = 180
 W = 95
 
 [ScorePlayer4Avatar]
-X = 48
+X = 50
 Y = 281
 W = 58
 H = 82
@@ -5076,7 +5095,7 @@ Type = Transparent
 
 [ScorePlayer4Static7]
 Inheritance = ScorePlayer1Static5
-X = 41
+X = 43
 Y = 272
 W = 72
 H = 100
@@ -5084,6 +5103,10 @@ H = 100
 # P L A Y E R  T W O
 
 # Rating
+
+[ScoreStaticRatingPicture5]
+Inheritance = ScoreStaticRatingPicture4
+X = 305
 
 [ScoreTextName5]
 Inheritance = ScoreTextName4
@@ -5152,10 +5175,6 @@ Y = 230
 [ScorePlayer5Static4]
 Inheritance = ScorePlayer5Static1
 Y = 255
-
-[ScoreStaticRatingPicture5]
-Inheritance = ScoreStaticRatingPicture4
-X = 300
 
 [ScoreTextScore5]
 Inheritance = ScoreTextScore4
@@ -5273,7 +5292,7 @@ Y = 255
 
 [ScoreStaticRatingPicture6]
 Inheritance = ScoreStaticRatingPicture4
-X = 560
+X = 565
 
 [ScoreTextScore6]
 Inheritance = ScoreTextScore4
@@ -5326,15 +5345,15 @@ Color = P3Dark
 # P L A Y E R  O N E
 [ScoreFourPTextName1]
 Inheritance = ScoreTextName1
-X = 75
+X = 60
 Y = 140
-Size = 26
+Size = 23
 
 # Rating
 [ScoreFourPStaticRatingPicture1]
 X = 315
-Y = 160
-H = 55
+Y = 150
+H = 68
 W = 55
 Type = Transparent
 
@@ -5478,7 +5497,7 @@ H = 59
 # P L A Y E R  T W O
 [ScoreFourPTextName2]
 Inheritance = ScoreFourPTextName1
-X = 595
+X = 625
 
 # Rating
 [ScoreFourPStaticRatingPicture2]
@@ -5595,12 +5614,13 @@ Color = P2Dark
 # P L A Y E R  T H R E E
 [ScoreFourPTextName3]
 Inheritance = ScoreFourPTextName1
+X = 70
 Y = 360
 
 # Rating
 [ScoreFourPStaticRatingPicture3]
 Inheritance = ScoreFourPStaticRatingPicture1
-Y = 380
+Y = 370
 
 [ScoreFourPTextScore3]
 Inheritance = ScoreFourPTextScore1
@@ -5713,12 +5733,13 @@ Color = P3Dark
 # P L A Y E R  F O U R
 [ScoreFourPTextName4]
 Inheritance = ScoreFourPTextName2
+X = 590
 Y = 360
 
 # Rating
 [ScoreFourPStaticRatingPicture4]
 Inheritance = ScoreFourPStaticRatingPicture2
-Y = 380
+Y = 370
 
 [ScoreFourPTextScore4]
 Inheritance = ScoreFourPTextScore2
