--- a/game/themes/common/Static Violet.ini
+++ b/game/themes/common/Static Violet.ini
@@ -142,14 +142,14 @@ ScoreEndCap     =[score]endcap.png
 ScoreLine       =[score]line.png
 PlayerNumberBox =[main]playerNumberBox.png
 
-Rating_0 =[score]rating_0.png
-Rating_1 =[score]rating_1.png
-Rating_2 =[score]rating_2.png
-Rating_3 =[score]rating_3.png
-Rating_4 =[score]rating_4.png
-Rating_5 =[score]rating_5.png
-Rating_6 =[score]rating_6.png
-Rating_7 =[score]rating_7.png
+Rating_0 =[score]rating_0.svg
+Rating_1 =[score]rating_1.svg
+Rating_2 =[score]rating_2.svg
+Rating_3 =[score]rating_3.svg
+Rating_4 =[score]rating_4.svg
+Rating_5 =[score]rating_5.svg
+Rating_6 =[score]rating_6.svg
+Rating_7 =[score]rating_7.svg
 
 # # # OPTIONS # # #
 Optionsbuttongeneral     =[Options]buttongeneral.svg
