Redesign song menu part 1

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -91,7 +91,7 @@ Color = White
 Font = 0
 Size = 15
 Align = 0
-Text = UltraStar WorldParty 24.02
+Text = UltraStar WorldParty 24.03
 
 [MainText2]
 X = 5
@@ -567,6 +567,66 @@ Alpha = 0.85
 Color = White
 Type = Transparent
 
+[SongMenuStaticSelectSong]
+Tex = SongMenuStaticSelectSong
+X = 585
+Y = 75
+W = 15
+H = 20
+Z = 1
+Color = White
+Type = Transparent
+
+[SongMenuStaticSortSongs]
+Tex = SongMenuStaticSortSongs
+X = 585
+Y = 105
+W = 16
+H = 20
+Z = 1
+Color = White
+Type = Transparent
+
+[SongMenuStaticUpdateScore]
+Tex = SongMenuStaticUpdateScore
+X = 585
+Y = 132
+W = 17
+H = 23
+Z = 1
+Color = White
+Type = Transparent
+
+[SongMenuStaticRefresh]
+Tex = SongMenuStaticRefresh
+X = 586
+Y = 166
+W = 14
+H = 18
+Z = 1
+Color = White
+Type = Transparent
+
+[SongMenuStaticPlaylist]
+Tex = SongMenuStaticPlaylist
+X = 586
+Y = 194
+W = 16
+H = 22
+Z = 1
+Color = White
+Type = Transparent
+
+[SongMenuStaticRemoval]
+Tex = SongMenuStaticRemoval
+X = 585
+Y = 255
+W = 15
+H = 20
+Z = 1
+Color = White
+Type = Transparent
+
 [SongMenuTextMenu]
 X = 690
 Y = 30
@@ -577,10 +637,10 @@ Font = 1
 Align = 1
 
 [SongMenuButton1]
-X = 580
+X = 605
 Y = 70
 Z = 0.97
-W = 220
+W = 195
 H = 30
 Tex = Rectangle
 Color = ColorLight
@@ -589,7 +649,7 @@ Type = Colorized
 Texts = 1
 
 [SongMenuButton1Text1]
-X = 30
+X = 5
 Y = 6
 Z = 0.97
 Color = White
@@ -603,13 +663,13 @@ Type = Transparent
 TypeSBG = Colorized
 ShowArrows = 1
 OneItemOnly = 1
-X = 580
+X = 605
 Y = 70
 W = 0
 H = 30
 Z = 0.97
 SkipX = 0
-SBGW = 220
+SBGW = 195
 TextSize = 15
 Color = ColorLight
 DColor = ColorDark
