--- a/game/themes/common/Static Violet.ini
+++ b/game/themes/common/Static Violet.ini
@@ -207,10 +207,16 @@ PartyClassicButton    =[partyoptions]classic.svg
 PartyTournamentButton =[partyoptions]tournament.svg
 PartyTeamBG           =[party]teambg.svg
 
-# # # BACKGROUNDS # # #
-SongMenuBG            =[menu]songMenuBg.png
-SongMenuSelectBG      =[menu]songMenuSelectBg.png
-
+# # # SONG MENU # # #
+SongMenuBG                =[menu]songMenuBg.png
+SongMenuSelectBG          =[menu]songMenuSelectBg.png
+SongMenuStaticSelectSong  =[menu]SelectSong.svg
+SongMenuStaticSortSongs   =[menu]SortSongs.svg
+SongMenuStaticUpdateScore =[menu]UpdateScore.svg
+SongMenuStaticRefresh     =[menu]Refresh.svg
+SongMenuStaticPlaylist    =[menu]Playlist.svg
+SongMenuStaticRemoval     =[menu]Removal.svg
+	
 # # # NOTES # # #
 # sung notes - colorized with playercolors
 GrayLeft              =[sing]notesLeft.png
