Redesign song menu part 3

--- a/game/themes/common/Static Violet.ini
+++ b/game/themes/common/Static Violet.ini
@@ -215,6 +215,7 @@ SongMenuStaticSortSongs   =[menu]SortSongs.svg
 SongMenuStaticUpdateScore =[menu]UpdateScore.svg
 SongMenuStaticRefresh     =[menu]Refresh.svg
 SongMenuStaticPlaylist    =[menu]Playlist.svg
+SongMenuStaticMedley      =[icon]song_medley.svg
 SongMenuStaticRemoval     =[menu]Removal.svg
 	
 # # # NOTES # # #
