--- a/game/themes/common/Static Violet.ini
+++ b/game/themes/common/Static Violet.ini
@@ -75,13 +75,13 @@ Menubg =[menu]bg.png
 
 # # Icons Legend # #
 icon_song_search      =[icon]song_search.svg
-icon_song_video       =[icon]song_video.png
-icon_song_medley      =[icon]song_medley.png
-icon_song_duet        =[icon]song_duet.png
-icon_song_rap         =[icon]song_rap.png
-icon_song_createdby   =[icon]song_createdby.png
-icon_song_fixedby     =[icon]song_fixedby.png
-icon_song_unvalidated =[icon]song_unvalidated.png
+icon_song_video       =[icon]song_video.svg
+icon_song_medley      =[icon]song_medley.svg
+icon_song_duet        =[icon]song_duet.svg
+icon_song_rap         =[icon]song_rap.svg
+icon_song_createdby   =[icon]song_createdby.svg
+icon_song_fixedby     =[icon]song_fixedby.svg
+icon_song_unvalidated =[icon]song_unvalidated.svg
 
 # # # SING # # #
 #the bar where the lyrics reside
